# Data-Cleaner-PRO-v2.0.0

./: Setup File.py  requirements.txt  settings.json  setup.cfg
Jupyter Notebook/: QuickStart.py
docs/: README.md
examples/: 04_time_series_cleaning.py
examples/configs/: ecommerce_config.json  validation_rules.json
src/: __init__.py  validators
tests/: (OPZ)_utils.py  test_trasformers.py
