#Setup

[metadata]
name = ecommerce-cleaner
version = 0.1.0
author = Il Tuo Nome
description = E-commerce data cleaning and analysis package

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.5.0
    numpy>=1.24.0
    scikit-learn>=1.2.0

[options.packages.find]
where = src

[tool:black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist
